// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationHeaderUtility it should pass in a custom prop 1`] = `
<InjectIntl(UtilityButton)
  id="test"
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with a default role when no role is specified 1`] = `
<InjectIntl(UtilityButton)
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title="name"
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with a title 1`] = `
<InjectIntl(UtilityButton)
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title="name"
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with a user specified role 1`] = `
<InjectIntl(UtilityButton)
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="menu"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  title="name"
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with an accessory 1`] = `
<InjectIntl(UtilityButton)
  accessory={<image />}
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with default props 1`] = `
<InjectIntl(UtilityButton)
  initialSelectedKey="menu"
  menuItems={[]}
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  variant="header"
/>
`;

exports[`ApplicationHeaderUtility should render with menu items 1`] = `
<InjectIntl(UtilityButton)
  initialSelectedKey="menu"
  menuItems={
    [
      {
        "childKeys": [
          "item-1",
          "item-2",
          "item-3",
          "item-4",
          "item-5",
          "item-6",
          "item-7",
          "item-8",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "menu",
        "metaData": {
          "otherInformation": "Other Information",
        },
        "title": "Menu",
      },
      {
        "childKeys": [
          "item-1.1",
        ],
        "content": undefined,
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-1",
        "title": "Name",
      },
      {
        "childKeys": [
          "item-2.1",
          "item-2.2",
        ],
        "id": "test-item-2",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2",
        "title": "Profile",
      },
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-3",
        "title": "Notifications",
      },
      {
        "childKeys": [
          "item-4.1",
          "item-4.2",
          "item-4.3",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4",
        "title": "Projects",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-1.1",
        "metaData": {
          "otherInformation": "Other Information",
        },
        "title": "John Doe",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2.1",
        "title": "Gender: Male",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-2.2",
        "title": "Location: Germany",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.1",
        "title": "Project 1",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.2",
        "title": "Project 2",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-4.3",
        "title": "Project 3",
      },
      {
        "childKeys": [
          "item-5.1",
          "item-5.2",
        ],
        "contentLocation": "body",
        "isSelectable": false,
        "isSelected": false,
        "key": "item-5",
        "title": "Skills",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-5.1",
        "title": "Skill 1",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-5.2",
        "title": "Skill 2",
      },
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelectable": true,
        "isSelected": false,
        "key": "item-6",
        "title": "Logout",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "id": "test-item-7",
        "isSelectable": false,
        "isSelected": true,
        "key": "item-7",
        "title": "Drill-down capabilities provide the ability for the end-user to access different levels of information without creating ad hoc queries for each level of information. Instead the user is able to drill down to a detail level, or elevate to the summary level, through pull-down menus or mouse clicks.",
      },
      {
        "childKeys": [],
        "contentLocation": "body",
        "id": "test-item-8",
        "isReadOnly": true,
        "isSelectable": false,
        "isSelected": false,
        "key": "item-8",
        "title": "Last logged in: yesterday",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  variant="header"
/>
`;
